<resources>
    <string name="app_name">Timer</string>
    <string name="label_key_0">0</string>
    <string name="label_key_1">1</string>
    <string name="label_key_2">2</string>
    <string name="label_key_3">3</string>
    <string name="label_key_4">4</string>
    <string name="label_key_5">5</string>
    <string name="label_key_6">6</string>
    <string name="label_key_7">7</string>
    <string name="label_key_8">8</string>
    <string name="label_key_9">9</string>
    <string name="content_description_backspace">Backspace</string>
</resources>
