<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:orientation="horizontal"
        app:columnCount="3">
    <Button
            android:id="@+id/buttonKey1" android:text="@string/label_key_1"
            style="@style/NumericKeypadKey"/>
    <Button
            style="@style/NumericKeypadKey" android:id="@+id/buttonKey2"
            android:text="@string/label_key_2"/>
    <Button
            style="@style/NumericKeypadKey" android:id="@+id/buttonKey3"
            android:text="@string/label_key_3"/>
    <Button
            style="@style/NumericKeypadKey" android:id="@+id/buttonKey4"
            android:text="@string/label_key_4"/>
    <Button
            style="@style/NumericKeypadKey" android:id="@+id/buttonKey5"
            android:text="@string/label_key_5"/>
    <Button
            style="@style/NumericKeypadKey" android:id="@+id/buttonKey6"
            android:text="@string/label_key_6"/>
    <Button
            style="@style/NumericKeypadKey" android:id="@+id/buttonKey7"
            android:text="@string/label_key_7"/>
    <Button
            style="@style/NumericKeypadKey" android:id="@+id/buttonKey8"
            android:text="@string/label_key_8"/>
    <Button
            style="@style/NumericKeypadKey" android:id="@+id/buttonKey9"
            android:text="@string/label_key_9"/>
    <Space
            style="@style/NumericKeypadKey"/>
    <Button
            style="@style/NumericKeypadKey" android:id="@+id/buttonKey0"
            android:text="@string/label_key_0"/>

    <ImageButton
            app:srcCompat="@drawable/ic_backspace"
            android:padding="0dp"
            android:id="@+id/buttonKeyBackspace"
            android:tint="@color/colorAccent"
            android:contentDescription="@string/content_description_backspace"
            style="@style/NumericKeypadKey"/>
</android.support.v7.widget.GridLayout>